# danbooru-get-tags-bot

./: .gitignore  LICENSE  PROMPT.md  README.md  pyproject.toml
src/bot/: config_manager.py  main.py  onnx_tagger.py
